# Pomodoro

./: .editorconfig  Cargo.toml  LICENSE  Pomodoro.desktop  README.md  build.rs  local.app.Pomodoro.gschema.xml  pomodoro.cmb  resources.gresource.xml
scripts/: install.sh
src/: main.rs  settings.rs  settings.ui  window.rs  window.ui
src/state/: mod.rs  todo.rs
src/widgets/: mod.rs  timer.rs  timer.ui  todo.rs  todo.ui
