[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
directories = "5.0.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
notify-rust = "4.10.0"
once_cell = "1.19.0"
rodio = "0.17.3"

[build-dependencies]
glib-build-tools = "0.18.0"
