[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4"] }
directories = "6.0.0"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12"] }
notify-rust = "4.11.6"
once_cell = "1.21.3"
rodio = "0.20.1"

[build-dependencies]
glib-build-tools = "0.20.0"
